--- a/style/main.css
+++ b/style/main.css
@@ -30,7 +30,7 @@ h1{
 }
 .freespace{
     background-color: #f0f0f0;
-    border: 1px solid #ccc;
+    border: 1px solid #4caf50;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -38,6 +38,11 @@ h1{
     width: 100%;
     height: 100%;
     font-size: 1rem;
+}
+.clicked:hover {
+    background-color: #d0ffd0;
+    border: 1px solid #4caf50;
+    cursor: default;
 }
 
 .clicked{
