--- a/style/main.css
+++ b/style/main.css
@@ -49,3 +49,25 @@ h1{
     background-color: #d0ffd0;
     border: 1px solid #4caf50;
 }
+
+img {
+    -webkit-user-drag: none;
+    -webkit-user-select: none;
+    user-select: none;
+}
+
+#newGame{
+    background-color: pink;
+}
+@media (max-width: 768px) {
+    .grid-container {
+        display: grid;
+        grid-template-columns: repeat(5, 1fr);
+        grid-template-rows: repeat(5, 1fr);
+        aspect-ratio: 1 / 1;
+        width: 90vw;
+        min-width: 30vw;
+        margin: 0 auto;
+        height: auto;
+}
+}
