--- a/style/main.css
+++ b/style/main.css
@@ -1,6 +1,10 @@
 h1{
     text-align: center;
 }
+body{
+    background-size: cover;
+    background-color: #2e282a;
+}
 .grid-container {
     display: grid;
     grid-template-columns: repeat(5, 1fr);
