--- a/style/main.css
+++ b/style/main.css
@@ -73,3 +73,14 @@ img {
         gap: 0.2rem;
 }
 }
+
+.logo {
+    display: block;
+    margin: 0 auto;
+    width: 50%;
+    max-width: 300px;
+    height: auto;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    transform: translateX(-1%);
+}
