--- a/style/main.css
+++ b/style/main.css
@@ -56,10 +56,6 @@ img {
     -webkit-user-select: none;
     user-select: none;
 }
-
-#newGame{
-    background-color: pink;
-}
 @media (max-width: 768px) {
     .grid-container {
         display: grid;
@@ -77,10 +73,81 @@ img {
 .logo {
     display: block;
     margin: 0 auto;
-    width: 50%;
+    width: 10%;
     max-width: 300px;
     height: auto;
     margin-bottom: 20px;
     margin-top: 20px;
     transform: translateX(-1%);
+}
+
+#drunk-switch {
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    z-index: 1000;
+    transition: 1s;
+}
+
+.switch {
+  position: relative;
+  width: 60px;
+  height: 30px;
+  background-color: #d397ad;
+  border-radius: 30px;
+  cursor: pointer;
+  transition: background-color 0.4s ease;
+}
+
+.switch-track {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: inherit;
+  border-radius: inherit;
+}
+
+.switch-thumb {
+  position: absolute;
+  top: 2px;
+  left: 2px;
+  width: 26px;
+  height: 26px;
+  background-color: #952c52;
+  border-radius: 50%;
+  transition: 0.4s ease;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+}
+
+.switch.active {
+  background-color: #952c52;
+}
+
+.switch.active .switch-thumb {
+  left: 32px;
+  background-color: #d397ad;
+}
+.wine{
+    position: absolute;
+    width: 100px;
+    bottom: 0;
+    right: 0;
+}
+.switch-holder {
+    position: fixed;
+    right: 3em;
+    top: 5em;
+
+}
+
+.btn {
+    display: block;
+    margin: 0 auto;
+    width: 10%;
+    max-width: 300px;
+    height: auto;
+    margin-top: 5px;
 }
