--- a/style/main.css
+++ b/style/main.css
@@ -67,30 +67,35 @@ img {
         margin: 0 auto;
         height: auto;
         gap: 0.2rem;
-}
+    }
+    .btn {
+        width: 40% !important;
+        max-width: 100% !important;
+        margin-top: 1.5em !important;
+    }
+    .logo {
+        width: 50% !important;
+        max-width: 100% !important;
+        margin-top: 1.5em !important;
+        margin-bottom: 1.5em !important;
+    }
+    .switch-holder {
+        position: absolute !important;
+        right: 1em !important;
+        top: 35em !important;
+    }
 }
 
 .logo {
     display: block;
     margin: 0 auto;
-    width: 10%;
-    max-width: 300px;
+    width: 13em;
     height: auto;
     margin-bottom: 20px;
     margin-top: 20px;
     transform: translateX(-1%);
 }
 
-#drunk-switch {
-    position: fixed;
-    bottom: 10px;
-    right: 10px;
-    width: 50px;
-    height: 50px;
-    cursor: pointer;
-    z-index: 1000;
-    transition: 1s;
-}
 
 .switch {
   position: relative;
